--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -27,3 +27,21 @@ jobs:
 
     - name: Upload Source Code to S3 bucket
       run: aws s3 sync ./source s3://source.helmcode.com/api_blog --delete
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+          aws deploy create-deployment \
+            --application-name api_blog \
+            --deployment-group-name api_blog \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --s3-location bucket=source.helmcode.com,key=api_blog/api_blog_prod.tar.gz,bundleType="tgz"
